--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </script>
 
             <FLOURISH CARTAS>
-                <div class="flourish-embed flourish-hierarchy" data-src="visualisation/2076932" data-url="https://flo.uri.sh/visualisation/2076932/embed" data-width="80%">
+                <div class="flourish-embed flourish-hierarchy" data-src="visualisation/2076932" data-url="https://flo.uri.sh/visualisation/2076932/embed">
                     <script src="https://public.flourish.studio/resources/embed.js"></script>
                 </div>
 
