--- a/Main.html
+++ b/Main.html
@@ -68,7 +68,7 @@ onClick="MM_showHideLayers('MM','','hide','TP','','hide','data','','show')">Anal
     <section id="TP">
       <nav>
          <li>
-          <a href= "https://araigoso.github.io/infovis/index.html"> Truco Argentino - Partidas personales 
+          <a href= "https://araigoso.github.io/infovis/Trabajo2/DatosPersonales.html"> Truco Argentino - Partidas personales 
           </a>
             </li>
       </nav>
@@ -200,6 +200,36 @@ section#TP, section#data{
 
 section#MM, section#TP, section#data {
   visibility:hidden;
+}
+  nav {
+ 
+  width:100%;
+  height:40px;
+  background: #F5ECCE;
+  
+}
+nav ul{
+  list-style: none;
+  
+  
+  
+}
+
+nav li{
+  float:left;
+ 
+ 
+}
+
+nav a { 
+  color: #666;
+  text-decoration: none;
+  display:block;
+  padding: 12px 40px;
+  font-size:18px;
+  text-align:center;
+  
+ 
 }
   </style>
       
