--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <DOCTYPE html>
 	<html lang= "es">
 		<head>
@@ -79,6 +77,13 @@ onClick="MM_showHideLayers('MM','','hide','TP','','hide','data','','show')">Anal
 									<a href= "https://colab.research.google.com/drive/1Beyu_voqCVev9WdkhpkAAZXpHQCZDslV"> Analisis de BATAXI 
           </a>
 								</li>
+                              <li>
+									<a href= "https://colab.research.google.com/drive/1NNJkRpRgJEN7PP5LRwxW5hBGGTFdzAZN?usp=sharing"> Analisis de NACIMIENTOS 
+          </a>
+								</li>
+                               <li>
+									<a href= "https://colab.research.google.com/drive/1tmPTdm2sl7Wnj8dUHo9PwEd31qocZi6E?usp=sharing"> Analisis del COVID-19
+								</li>
 							</nav>
 						</section>
 					</div>
@@ -156,24 +161,13 @@ main{
   position:relative;
 }
 
-section#MM{
+section#MM,section#TP, section#data {
   width:760px;
   height:500px;
   background:#F5ECCE;
   padding:20px;
   position: absolute;
   z-index:1;
-  top:50px;
-  left:100px;
-}
-
-section#TP, section#data{
-  width:760px;
-  height:500px;
-  background:#F5ECCE;
-  padding:20px;
-  position: absolute;
-  z-index:auto;
   top:50px;
   left:100px;
 }
@@ -208,3 +202,4 @@ nav a {
   
   </style>
 			</html>
+
